--- a/notebooks/statistycs.ipynb
+++ b/notebooks/statistycs.ipynb
@@ -78,6 +78,19 @@
     "data2 = pd.read_csv(path.format(file2))\n",
     "fplt.general_distribution(data2, targets=[\"Fico\", \"fico\", \"Rodolfo\", \"rodolfo\", \"Sergio\", \"sergio\", \"sergio_fajardo\", \"Fajardo\", \"FicoGutierrez\"])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups2 = {\n",
+    "    \"Petro\": [\"Gustavo\", \"petro\", \"Petro\", \"gustavopetro\", \"GustavoPetro\", \"gustavito\", \"gustavo\"],\n",
+    "    \"Rodolfo\": [\"Rodo\", \"Rodolfo\", \"rodolfo\"],\n",
+    "}\n",
+    "fplt.group_distribution(data2, groups2)"
+   ]
   }
  ],
  "metadata": {
